--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -3,4 +3,9 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
+    <TextEdit android:layout_width ="match_parent" android:layout_height = "20px">
+
+    </TextEdit>
+
 </LinearLayout>
